# awdemos

./: .gitignore  AGENTS.md  BENCHMARKS.md  COMPARISONS.md  CONTRIBUTING.md  GITHUB_PROFILE_README.md  History.md  LICENSE  MLOPS.md  Nvidia_cloud_vendors.md  Nvidia_software.md  PROJECTS.md  README.md  README_RegicideOS.md  README_cy.md  README_de.md  README_el.md  README_es.md  README_fr.md  README_hi.md  README_ja.md  README_la.md  README_pt.md  README_ru.md  README_sv.md  README_ur.md  README_zh.md  Research.md  Resume.md  SCREENSHOTS.md  git_large_repos.md
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
builds/: Buildkit.md
demos/: CATEGORIES.md  README.md
demos/llm/finetuning/: README.md  config.yaml  finetuner.py  pyproject.toml  verify_prereqs_finetune.py
demos/llm/finetuning/adaptive_boundary_experiment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
demos/rust/ai/llm_inference_server/: Cargo.toml  README.md
demos/rust/ai/llm_inference_server/src/: main.rs
docs/: 25_Verbs_DevOps_Comprehensive_Skills_Framework.html  25_Verbs_DevOps_Comprehensive_Skills_Framework.md  25_Verbs_Devops.md  GLM-4.7-Z.ai-Setup-Guide.md  My_AI_Leadership_Journey.html  My_AI_Leadership_Journey.md  My_AI_Leadership_jopurney.html  My_AI_Leadership_jopurney.md  Repo2txt.md  Whitfied_in_Latin.md  Z.ai-GLM-Coding-Plan-Setup-Bible.md  index.md  robots.txt  sitemap.xml
dotfiles/: fzf.sh  pyenv_setup.sh  tmux.conf  zshrc
eks-gha-aws/: Pulumi.yaml
etheretum-node-gcp/: go.mod
ethereum-node-gcp/: Pulumi.dev.yaml
fargate-docker-python/: Pulumi.yaml  go.mod  (+1 more)
(+258 files in other folders)
