[project]
name = "adaptive-boundary-experiment"
version = "0.3.0"
description = "Bidirectional reasoning LM trainer"
requires-python = ">=3.10"
dependencies = [
    "dspy>=0.3.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "datasets>=2.18.0",
    "scikit-learn>=1.4.0"
]

[tool.model-config]
checkpoint = "HuggingFaceTB/SmolLM2-360M"
epochs = 2
learning_rate = 5e-5

