[package]
name = "llm_inference_server"
version = "0.1.0"
edition = "2021"

[dependencies]
candle = { version = "0.7", features = ["cuda"] }
candle-transformers = "0.7"
candle-nn = "0.7"
tokio = { version = "1.42", features = ["full"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "server"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
inherits = "release"
debug = true
